clang/test/BSC/Negative/Method/BuiltInType/int_function_call/int_function_call.cbs
// RUN: %clang_cc1 -verify %s

void int::increase() {
}

int main() {
    int x = 1;
    int *y = &x;
    x.increase(); // expected-error {{no instance member named 'increase' in type 'int'; did you mean to use '::' instead of '.'?}}
                  // expected-note@-1 {{found the following member function 'increase' which doesn't have a 'this' parameter}}
    y->increase(); // expected-error {{no instance member named 'increase' in type 'int'; did you mean to use '::' instead of '->'?}}
                   // expected-note@-1 {{found the following member function 'increase' which doesn't have a 'this' parameter}}
    return 0;
}